# birdie

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  justfile  meson.build  meson_options.txt
.github/workflows/: flatpak.yml
build-aux/: gen-proto.py  validate-desktop.sh
build-aux/flatpak/: me.dusansimic.Birdie.json  org.birdie.Birdie.json  python3-deps.json
data/: me.dusansimic.Birdie.desktop.in  me.dusansimic.Birdie.gschema.xml  me.dusansimic.Birdie.metainfo.xml.in  meson.build  org.birdie.Birdie.desktop.in  org.birdie.Birdie.gschema.xml  org.birdie.Birdie.metainfo.xml.in
po/: POTFILES.in  meson.build
src/: birdie.in  meson.build
src/birdie/: __init__.py  application.py  async_utils.py  main.py  preferences.py  window.py
src/birdie/daemon/: client.py  daemon_pb2.py  daemon_pb2_grpc.py
src/birdie/views/: events_view.py  login_dialog.py  networks_view.py  profiles_view.py  status_view.py
